fix(icon): revert collapse css changes #442

--- a/src/tedi/components/buttons/collapse/collapse.module.scss
+++ b/src/tedi/components/buttons/collapse/collapse.module.scss
@@ -17,6 +17,7 @@
     }
 
     &:focus-visible {
+      border-radius: 0;
       outline: var(--borders-02) solid var(--general-border-brand);
       outline-offset: 1px;
 
@@ -115,45 +116,20 @@
     }
 
     .tedi-collapse__title {
-      &:hover,
-      &:active,
-      &:focus-visible {
-        .tedi-collapse__text {
-          color: inherit;
-          text-decoration: none;
-        }
-      }
+      border-radius: 100%;
 
-      &:hover .tedi-collapse__icon-wrapper {
+      &:hover {
         background: var(--button-main-neutral-icon-only-background-hover);
-
-        &.tedi-collapse__icon-wrapper--secondary {
-          background: var(--button-main-secondary-background-hover);
-          border-color: var(--button-main-secondary-border-hover);
-        }
       }
 
-      &:active .tedi-collapse__icon-wrapper {
+      &:active {
         background: var(--button-main-neutral-icon-only-background-active);
-
-        &.tedi-collapse__icon-wrapper--secondary {
-          background: var(--button-main-secondary-background-active);
-          border-color: var(--button-main-secondary-border-active);
-        }
       }
 
       &:focus-visible {
-        outline: none;
-
-        .tedi-collapse__icon-wrapper {
-          border-radius: 100%;
-          outline: var(--borders-02) solid var(--general-border-brand);
-          outline-offset: 2px;
-        }
-
-        .tedi-collapse__icon-wrapper &.tedi-collapse__icon-wrapper--secondary {
-          background: var(--button-main-secondary-background-focus);
-        }
+        color: var(--link-primary-focus);
+        outline: var(--borders-02) solid var(--general-border-brand);
+        outline-offset: 2px;
       }
     }
   }
